<resources>
    <string name="app_name">GearApplication</string>
    <string name="action_settings">Settings</string>

    <!--welcome-->
    <string name="main_activity">Main Activity Demo</string>
    <string name="main_data_binding">DataBinding Demo</string>
    <string name="main_rx_java">RxJava</string>
    <string name="main_web_view">WebView</string>
    <string name="main_recycler">RecyclerDemo</string>

    <!--transitionName-->
    <string name="tra_name_list_img">tra name list img</string>
</resources>
